samples/_failures_safe/1761255905_e5f07f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_643b0b82.c: In function ‘print_token’:
./samples/SAFE/__tmp_643b0b82.c:166:33: error: missing terminating " character
  166 |         "NUMBER", "IDENTIFIER", "
      |                                 ^
./samples/SAFE/__tmp_643b0b82.c:166:9: error: expected expression at end of input
  166 |         "NUMBER", "IDENTIFIER", "
      |         ^~~~~~~~
./samples/SAFE/__tmp_643b0b82.c:166:9: error: expected declaration or statement at end of input
